@@ -312,6 +312,7 @@ Release 0.20.0 - Unreleased
    HBASE-1727  HTD and HCD versions need update
    HBASE-1604  HBaseClient.getConnection() may return a broken connection
                without throwing an exception (Eugene Kirpichov via Stack)
+   HBASE-1737  Regions unbalanced when adding new node
 
   IMPROVEMENTS
    HBASE-1089  Add count of regions on filesystem to master UI; add percentage
